--- a/GradeBook/Views/Users/Index.cshtml
+++ b/GradeBook/Views/Users/Index.cshtml
@@ -1,9 +1,35 @@
-﻿
+﻿@model IEnumerable<GradeBook.Storage.Entities.User>
 @{
     ViewData["Title"] = "Пользователи";
 }
 
 <h1>Пользователи</h1>
 
+<table class="table">
+    <thead>
+        <tr>
+            <th scope="col">#</th>
+            <th scope="col">Login</th>
+            <th scope="col">Password</th>
+            <th scope="col">IsAdmin</th>
+        </tr>
+    </thead>
+    <tbody>
+        @{
+            int i = 0;
+        }
+        @foreach(var user in Model)
+        {
+            i++;
+            <tr>
+                <th scope="row">@i</th>
+                <td>@user.Login</td>
+                <td>@user.Password</td>
+                <td>@user.IsAdmin</td>
+            </tr>
+        }
+        
 
+    </tbody>
+</table>
 
