--- a/GradeBook/Views/Users/Index.cshtml
+++ b/GradeBook/Views/Users/Index.cshtml
@@ -9,23 +9,33 @@
     <thead>
         <tr>
             <th scope="col">#</th>
-            <th scope="col">Login</th>
-            <th scope="col">Password</th>
-            <th scope="col">IsAdmin</th>
+            <th scope="col">Логин</th>
+            <th scope="col">Пароль</th>
+            <th scope="col">Права администратора</th>
+            <th scope="col">Действия</th>
         </tr>
     </thead>
     <tbody>
         @{
             int i = 0;
         }
-        @foreach(var user in Model)
+        @foreach (var user in Model)
         {
             i++;
             <tr>
                 <th scope="row">@i</th>
                 <td>@user.Login</td>
                 <td>@user.Password</td>
-                <td>@user.IsAdmin</td>
+                <td>@if (user.IsAdmin)
+                    {
+                        <text>Администратор</text>
+                    }
+                    else
+                    {
+                        <text>Пользователь</text>
+                    }
+                </td>
+                <td>@Html.ActionLink("Удалить", "RemoveUser", "Users", new{id = user.Id}, new {@class="btn btn-primary"})</td>
             </tr>
         }
         
