--- a/GradeBook/Views/Teachers/Index.cshtml
+++ b/GradeBook/Views/Teachers/Index.cshtml
@@ -41,7 +41,7 @@
                         }
                     </ul>
                 </td>
-                <td>@Html.ActionLink("Удалить", "RemoveUser", "Users", new{id = item.Teacher.Id}, new {@class="btn btn-primary"})</td>
+                <td>@Html.ActionLink("Удалить", "Remove", "Teachers", new{id = item.Teacher.Id}, new {@class="btn btn-primary"})</td>
             </tr>
         }
         
