--- a/GradeBook/Views/Teachers/Index.cshtml
+++ b/GradeBook/Views/Teachers/Index.cshtml
@@ -1,9 +1,9 @@
 ﻿@model IEnumerable<GradeBook.Models.TeacherViewModel>
 @{
-    ViewData["Title"] = "Пользователи";
+    ViewData["Title"] = "Преподаватели";
 }
 
-<h1>Пользователи</h1>
+<h1>Преподаватели</h1>
 
 <table class="table">
     <thead>
