--- a/GradeBook/Views/Shared/Login.cshtml
+++ b/GradeBook/Views/Shared/Login.cshtml
@@ -2,5 +2,5 @@
 <form asp-action="LogIn" asp-controller="Home" asp-antiforgery="true">
     <input type="text" asp-for="Login"/>
     <input type="password" asp-for="Password"/>
-    <input type="submit" value="Sing In" class="btn btn-primary" />
+    <input type="submit" value="Войти" class="btn btn-primary" />
 </form>
