--- a/GradeBook/Views/Subjects/SubjectAddition.cshtml
+++ b/GradeBook/Views/Subjects/SubjectAddition.cshtml
@@ -1,5 +1,5 @@
 ﻿@model GradeBook.Storage.Entities.Subject
-<form asp-controller="Teachers" asp-action="Add" id="formId">
+<form asp-controller="Subjects" asp-action="Add" id="formId">
     <th scope="row"></th>
     <td>@Html.EditorFor(u => u.Name)</td>
     <td>
