--- a/GradeBook/Views/Shared/_Layout.cshtml
+++ b/GradeBook/Views/Shared/_Layout.cshtml
@@ -48,7 +48,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2022 - GradeBook - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; Модульный журнал - Глинкин Максим, Москва 2022 г.
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
