--- a/GradeBook/Views/Groups/EditStudents.cshtml
+++ b/GradeBook/Views/Groups/EditStudents.cshtml
@@ -3,12 +3,11 @@
     ViewData["Title"] = "Редактирование студентов в группе";
 }
 
-<h1>Редактирование студентов в группе</h1>
+<h1>Редактирование студентов в группе @Model.Group.Name</h1>
 
 <form asp-action="EditStudents" asp-controller="Groups" method="post">
     <p>Вставьте список студентов по 1 на строку:</p>
     @Html.HiddenFor(m => m.Group.Id)
     <textarea asp-for="Students" style="width: 500px; height: 700px; resize: both"></textarea>
-    <br />
-    <input type="submit" value="Сохранить" class="btn btn-primary" />
+    <input type="submit" value="Сохранить" class="btn btn-primary" style="position: absolute; margin-left: 25px;">
 </form>
