--- a/GradeBook/Views/Grades/SetGrades.cshtml
+++ b/GradeBook/Views/Grades/SetGrades.cshtml
@@ -8,7 +8,7 @@
 <h2>по предмету @Model.Subject.Name</h2>
 
 <div style="height: 1em; width: 1em; background-color: yellow; display: inline-block;"></div><span> - Переставлено в деканат, изменять нельзя</span><br />
-<div style="height: 1em; width: 1em; background-color: red; display: inline-block;"></div><span> - Требуется подтверждение на кафедре, изменять нельзя</span><br />
+<div style="height: 1em; width: 1em; background-color: red; display: inline-block;"></div><span> - Требуется согласование на кафедре, изменять нельзя</span><br />
 <table class="table">
     <thead>
         <tr>
