--- a/GradeBook/Views/GradesTransfer/Index.cshtml
+++ b/GradeBook/Views/GradesTransfer/Index.cshtml
@@ -1,9 +1,9 @@
 ﻿@model GradeBook.Models.GradesTransferViewModel
 
 @{
-    ViewData["Title"] = "Проставление оценок";
+    ViewData["Title"] = "Перенос оценок";
 }
-
+<h2 style="margin-bottom:20px;">Перенос оценок</h2>
 <h2>Есть непереставленные или несогласованные оценки:</h2>
 
 <table class="table">
