--- a/GradeBook/Views/GradesTransfer/TransferGrades.cshtml
+++ b/GradeBook/Views/GradesTransfer/TransferGrades.cshtml
@@ -1,10 +1,10 @@
 ﻿@model GradesViewModel
 
 @{
-    ViewData["Title"] = "Проставление оценок";
+    ViewData["Title"] = "Перенос оценок";
 }
 
-<h2>Проставление оценок группе @Model.Group.Name</h2>
+<h2>Перенос оценок группы @Model.Group.Name</h2>
 <h2>по предмету @Model.Subject.Name</h2>
 
 <div style="height: 1em; width: 1em; background-color: yellow; display: inline-block;"></div><span> - Переставлено в деканат, изменять нельзя</span><br />
