--- a/GradeBook/Views/Users/Index.cshtml
+++ b/GradeBook/Views/Users/Index.cshtml
@@ -31,6 +31,10 @@
                     {
                         <text>Администратор</text>
                     }
+                    else if(user.IsGradeTransfer)
+                    {
+                        <text>Переноситель оценок</text>
+                    }
                     else
                     {
                         <text>Пользователь</text>
