--- a/GradeBook/Views/Home/Index.cshtml
+++ b/GradeBook/Views/Home/Index.cshtml
@@ -3,6 +3,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Добро пожаловать в модульный журнал!</h1>
+    
+    <h2 style="margin-top: 100px;">Выполните вход в систему, чтобы продолжить использование</h2>
 </div>
